# Kanban-Project

./: .dockerignore  AGENTS.md  Dockerfile
backend/: AGENTS.md  pyproject.toml
backend/app/: ai_client.py  ai_structured.py  board_schema.py  database.py  main.py
backend/data/: pm.db
backend/static/: index.html
backend/tests/: conftest.py  test_ai_chat_endpoint.py  test_ai_client.py  test_ai_endpoint.py  test_ai_live_integration.py  test_ai_structured.py  test_app.py  test_auth.py  test_board_api.py  test_board_validation.py  test_db_initialization.py  test_frontend_mount.py
docs/: DATABASE_MODEL.md  PLAN.md
frontend/: AGENTS.md  playwright.config.ts
frontend/src/components/: AiSidebar.test.tsx  AiSidebar.tsx  KanbanApp.test.tsx  KanbanApp.tsx  KanbanBoard.tsx
frontend/src/lib/: api.ts
frontend/tests/: global-teardown.ts  kanban.spec.ts
scripts/: AGENTS.md  start-linux.sh  start-windows.ps1  stop-macos.sh  stop-windows.ps1
