[project]
name = "pm-backend"
version = "0.1.0"
description = "FastAPI backend for Project Management MVP"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.120.0",
  "itsdangerous>=2.2.0",
  "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
  "httpx>=0.28.1",
  "pytest>=8.4.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
